force scrollbar to prevent centering jump

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -2,13 +2,14 @@
 ---
 @import url('https://fonts.googleapis.com/css?family=Cutive+Mono')
 
-body, html
+body
     height: 100%
     margin: 0
     font-size: 16px
     font-family: 'Cutive Mono', monospace
     font-weight: 400
     line-height: 1.4em
+    overflow-y: scroll
 
 main
     max-width: 900px
